--- a/Titanic/Titanic.ipynb
+++ b/Titanic/Titanic.ipynb
@@ -239,6 +239,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_file = open('train.csv', 'rb')\n",
+    "test_file_object = csv.reader(test_file)\n",
+    "header = test_file_object.next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "prediction_file = open('gendermodel.csv', 'wb')\n",
+    "prediction_file_object = csv.writer(prediction_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
