updated gender model

--- a/Titanic/Titanic.ipynb
+++ b/Titanic/Titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -14,19 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_file = csv.reader(open('train.csv', 'rb'))\n",
     "header = csv_file.next()\n",
@@ -35,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -61,21 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of passengers: 891 \n",
-      "number of survived: 342.0 \n",
-      "proportion survived: 0.383838383838\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number_passengers = np.size(npdata[::,1].astype(np.float))\n",
     "number_survived = np.sum(npdata[::,1].astype(np.float))\n",
@@ -86,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -110,20 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Proportion of women who survived is 0.261503928171\n",
-      "Proportion of men who survived is 0.122334455668\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "women_survived = np.sum(women_onboard)/np.size(women_stats)\n",
     "men_survived = np.sum(men_onboard)/np.size(men_stats)\n",
@@ -133,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -146,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -164,6 +137,126 @@
     "test_file.close()\n",
     "prediction_file.close()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fare_ceiling = 40\n",
+    "npdata[npdata[0::,9].astype(np.float) >= fare_ceiling, 9] = fare_ceiling - 1.0\n",
+    "\n",
+    "fare_bracket_size = 10\n",
+    "number_of_price_brackets = fare_ceiling / fare_bracket_size\n",
+    "\n",
+    "number_of_classes = len(np.unique(npdata[0::,2])) #count the number of unique classes\n",
+    "\n",
+    "survival_table = np.zeros((2, number_of_classes, number_of_price_brackets))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in xrange(number_of_classes):     \n",
+    "    for j in xrange(number_of_price_brackets):\n",
+    "        women_only_stats = npdata[ \\\n",
+    "            (npdata[0::,4] == \"female\") & \\\n",
+    "            (npdata[0::,2].astype(np.float) == i+1) & \\\n",
+    "            (npdata[0:,9].astype(np.float) >= j*fare_bracket_size) & \\\n",
+    "            (npdata[0:,9].astype(np.float) < (j+1)*fare_bracket_size),1]\n",
+    "        \n",
+    "        survival_table[0,i,j] = np.mean(women_only_stats.astype(np.float))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in xrange(number_of_classes):\n",
+    "    for j in xrange(number_of_price_brackets):\n",
+    "        men_only_stats = npdata[ \\\n",
+    "                               (npdata[0::,4] == 'male') & \\\n",
+    "                               (npdata[0::,2].astype(np.float) == i+1) & \\\n",
+    "                               (npdata[0:,9].astype(np.float) >= j*fare_bracket_size) & \\\n",
+    "                               (npdata[0:,9].astype(np.float) < (j+1)*fare_bracket_size),1]\n",
+    "        \n",
+    "        survival_table[1,i,j] = np.mean(men_only_stats.astype(np.float))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0.  0.  1.  1.]\n",
+      "  [ 0.  1.  1.  1.]\n",
+      "  [ 1.  1.  0.  0.]]\n",
+      "\n",
+      " [[ 0.  0.  0.  0.]\n",
+      "  [ 0.  0.  0.  0.]\n",
+      "  [ 0.  0.  0.  0.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "survival_table[ survival_table != survival_table ] = 0\n",
+    "survival_table[survival_table >= 0.5] = 1\n",
+    "survival_table[survival_table < 0.5] = 0\n",
+    "print survival_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test_file = open('test.csv', 'rb')\n",
+    "test_file_object = csv.reader(test_file)\n",
+    "header = test_file_object.next()\n",
+    "\n",
+    "predictions_file = open(\"genderclassmodel.csv\", \"wb\")\n",
+    "p = csv.writer(predictions_file)\n",
+    "p.writerow([\"PassengerId\", \"Survived\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for row in test_file_object:\n",
+    "    for j in xrange(number_of_price_brackets):\n",
+    "        try:\n",
+    "            row[8] = float(row[8])\n",
+    "        except:\n",
+    "            bin_fare = 3 - float(row[1])\n",
+    "            break\n",
+    "        if row[8] > fare_ceiling"
    ]
   },
   {
