--- a/Titanic/Titanic.ipynb
+++ b/Titanic/Titanic.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -198,25 +198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[ 0.  0.  1.  1.]\n",
-      "  [ 0.  1.  1.  1.]\n",
-      "  [ 1.  1.  0.  0.]]\n",
-      "\n",
-      " [[ 0.  0.  0.  0.]\n",
-      "  [ 0.  0.  0.  0.]\n",
-      "  [ 0.  0.  0.  0.]]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "survival_table[ survival_table != survival_table ] = 0\n",
     "survival_table[survival_table >= 0.5] = 1\n",
@@ -226,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -238,17 +224,8 @@
     "\n",
     "predictions_file = open(\"genderclassmodel.csv\", \"wb\")\n",
     "p = csv.writer(predictions_file)\n",
-    "p.writerow([\"PassengerId\", \"Survived\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "p.writerow([\"PassengerId\", \"Survived\"])\n",
+    "\n",
     "for row in test_file_object:\n",
     "    for j in xrange(number_of_price_brackets):\n",
     "        try:\n",
@@ -256,8 +233,42 @@
     "        except:\n",
     "            bin_fare = 3 - float(row[1])\n",
     "            break\n",
-    "        if row[8] > fare_ceiling"
+    "        if row[8] > fare_ceiling:\n",
+    "            bin_fare = number_of_price_brackets - 1\n",
+    "            break\n",
+    "        if row[8] >= j * fare_bracket_size and row[8] < (j+1) * fare_bracket_size:\n",
+    "            bin_fare = j\n",
+    "            break\n",
+    "            \n",
+    "        if row[3] == 'female':\n",
+    "            p.writerow([row[0], '%d' % int(survival_table[0, float(row[1]) - 1, bin_fare])])\n",
+    "        else:\n",
+    "            p.writerow([row[0], '%d' % int(survival_table[1, float(row[1]) - 1, bin_fare])])\n",
+    "\n",
+    "test_file.close()\n",
+    "predictions_file.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
