--- a/comments.ipynb
+++ b/comments.ipynb
@@ -60,7 +60,7 @@
     "#Function to write labeled data into a csv file\n",
     "def writes(writer, label, data):\n",
     "    if label in data:\n",
-    "        writer.writerow([''.join(label+'|||' + info).strip()])\n",
+    "        writer.writerow([''.join(label+'|||' + data).strip()])\n",
     "\n",
     "#Labels to be assigned to each comment. In our case, all comments were about one of each departments below\n",
     "labels = ['quality', 'innovation', 'sales', 'marketing', 'project', 'accounting', 'it', 'customer', 'elgin', 'purchasing', \n",
