--- a/comments.ipynb
+++ b/comments.ipynb
@@ -67,7 +67,7 @@
     "          'inventory']        \n",
     "\n",
     "#Assign each comment to each department and write labeled output into a csv for further processing\n",
-    "with open('out.csv', 'w') as csvfile:\n",
+    "with open('out.csv', 'w', newline='') as csvfile:\n",
     "    writer = csv.writer(csvfile)\n",
     "    \n",
     "    for label in labels:\n",
