working on adding department table

--- a/Instacart/histograms.ipynb
+++ b/Instacart/histograms.ipynb
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 159,
    "metadata": {
     "collapsed": false
    },
@@ -942,51 +942,30 @@
     {
      "data": {
       "text/plain": [
-       "(['meat seafood',\n",
-       "  'canned goods',\n",
-       "  'dairy eggs',\n",
-       "  'snacks',\n",
-       "  'alcohol',\n",
-       "  'babies',\n",
-       "  'frozen',\n",
-       "  'missing',\n",
-       "  'household',\n",
-       "  'beverages',\n",
-       "  'produce',\n",
-       "  'dry goods pasta',\n",
-       "  'bulk',\n",
-       "  'deli',\n",
-       "  'bakery',\n",
-       "  'other',\n",
-       "  'pantry',\n",
-       "  'pets',\n",
-       "  'international',\n",
-       "  'breakfast',\n",
-       "  'personal care'],\n",
-       " [907,\n",
-       "  2092,\n",
-       "  3449,\n",
-       "  6264,\n",
-       "  1054,\n",
-       "  1081,\n",
-       "  4007,\n",
-       "  1258,\n",
-       "  3085,\n",
-       "  4365,\n",
-       "  1684,\n",
-       "  1858,\n",
-       "  38,\n",
-       "  1322,\n",
-       "  1516,\n",
-       "  548,\n",
-       "  5371,\n",
-       "  972,\n",
-       "  1139,\n",
-       "  1115,\n",
-       "  6563])"
+       "[907,\n",
+       " 2092,\n",
+       " 3449,\n",
+       " 6264,\n",
+       " 1054,\n",
+       " 1081,\n",
+       " 4007,\n",
+       " 1258,\n",
+       " 3085,\n",
+       " 4365,\n",
+       " 1684,\n",
+       " 1858,\n",
+       " 38,\n",
+       " 1322,\n",
+       " 1516,\n",
+       " 548,\n",
+       " 5371,\n",
+       " 972,\n",
+       " 1139,\n",
+       " 1115,\n",
+       " 6563]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +975,13 @@
     "bins = prod_by_dept.keys()\n",
     "counts = prod_by_dept.values()\n",
     "\n",
-    "bins, counts\n"
+    "bins, counts\n",
+    "\n",
+    "bins.sort()\n",
+    "\n",
+    "bins\n",
+    "\n",
+    "counts\n"
    ]
   },
   {
